// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toolbar should render inset 1`] = `
<div>
  <div
    class="pf-c-toolbar pf-m-inset-none pf-m-inset-sm-on-md pf-m-inset-2xl-on-xl pf-m-inset-lg-on-2xl"
    data-ouia-component-id="OUIA-Generated-Toolbar-1"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe="true"
    id="toolbar"
  >
    <div
      class="pf-c-toolbar__content"
    >
      <div
        class="pf-c-toolbar__content-section"
      >
        <div
          class="pf-c-toolbar__item"
        >
          Test
        </div>
        <div
          class="pf-c-toolbar__item"
        >
          Test 2
        </div>
        <hr
          class="pf-c-divider pf-m-vertical"
        />
        <div
          class="pf-c-toolbar__item"
        >
          Test 3 
        </div>
      </div>
      <div
        class="pf-c-toolbar__expandable-content"
        id="toolbar-expandable-content-0"
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`Toolbar should render with custom chip content 1`] = `
<Toolbar
  className="pf-m-toggle-group-container"
  collapseListedFiltersBreakpoint="xl"
  customChipGroupContent={
    <React.Fragment>
      <ToolbarItem>
        <Button
          id="save-button"
          isInline={true}
          onClick={[Function]}
          variant="link"
        >
          Save filters
        </Button>
      </ToolbarItem>
      <ToolbarItem>
        <Button
          id="clear-button"
          isInline={true}
          onClick={[Function]}
          variant="link"
        >
          Clear all filters
        </Button>
      </ToolbarItem>
    </React.Fragment>
  }
  id="toolbar-with-filter"
>
  <div
    className="pf-c-toolbar pf-m-toggle-group-container"
    data-ouia-component-id="OUIA-Generated-Toolbar-3"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe={true}
    id="toolbar-with-filter"
  >
    <ToolbarContent
      isExpanded={false}
      showClearFiltersButton={false}
    >
      <div
        className="pf-c-toolbar__content"
      >
        <div
          className="pf-c-toolbar__content-section"
        >
          <ToolbarToggleGroup
            breakpoint="xl"
            toggleIcon={<React.Fragment />}
          >
            <div
              className="pf-c-toolbar__group pf-m-toggle-group pf-m-show-on-xl"
            >
              <div
                className="pf-c-toolbar__toggle"
              >
                <Button
                  aria-controls="toolbar-with-filter-expandable-content-3"
                  aria-haspopup={false}
                  aria-label="Show Filters"
                  onClick={[Function]}
                  variant="plain"
                >
                  <ButtonBase
                    aria-controls="toolbar-with-filter-expandable-content-3"
                    aria-haspopup={false}
                    aria-label="Show Filters"
                    innerRef={null}
                    onClick={[Function]}
                    variant="plain"
                  >
                    <button
                      aria-controls="toolbar-with-filter-expandable-content-3"
                      aria-disabled={false}
                      aria-haspopup={false}
                      aria-label="Show Filters"
                      className="pf-c-button pf-m-plain"
                      data-ouia-component-id="OUIA-Generated-Button-plain-1"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe={true}
                      disabled={false}
                      onClick={[Function]}
                      role={null}
                      type="button"
                    />
                  </ButtonBase>
                </Button>
              </div>
              <ForwardRef
                variant="filter-group"
              >
                <ToolbarGroupWithRef
                  innerRef={null}
                  variant="filter-group"
                >
                  <div
                    className="pf-c-toolbar__group pf-m-filter-group"
                  >
                    <ToolbarFilter
                      categoryName="Status"
                      chips={
                        Array [
                          "New",
                          "Pending",
                        ]
                      }
                      deleteChip={[Function]}
                      deleteChipGroup={[Function]}
                      showToolbarItem={true}
                    >
                      <ToolbarItem>
                        <div
                          className="pf-c-toolbar__item"
                        >
                          <Select
                            aria-describedby=""
                            aria-invalid={false}
                            aria-label="Status"
                            aria-labelledby=""
                            chipGroupComponent={null}
                            className=""
                            clearSelectionsAriaLabel="Clear all"
                            createText="Create"
                            customBadgeText={null}
                            customContent={null}
                            direction="down"
                            favorites={Array []}
                            favoritesLabel="Favorites"
                            hasInlineFilter={false}
                            hasPlaceholderStyle={false}
                            inlineFilterPlaceholderText={null}
                            inputAutoComplete="off"
                            inputIdPrefix=""
                            isCreatable={false}
                            isCreateSelectOptionObject={false}
                            isDisabled={false}
                            isGrouped={false}
                            isInputFilterPersisted={false}
                            isInputValuePersisted={false}
                            isOpen={true}
                            isPlain={false}
                            menuAppendTo="inline"
                            noResultsFoundText="No results found"
                            onClear={[Function]}
                            onCreateOption={[Function]}
                            onFilter={null}
                            onSelect={[Function]}
                            onToggle={[Function]}
                            onTypeaheadInputChanged={null}
                            ouiaSafe={true}
                            placeholderText="Status"
                            position="left"
                            removeSelectionAriaLabel="Remove"
                            selections={
                              Array [
                                "New",
                                "Pending",
                              ]
                            }
                            toggleAriaLabel="Options menu"
                            toggleIcon={null}
                            toggleId={null}
                            typeAheadAriaLabel=""
                            validated="default"
                            variant="checkbox"
                            width=""
                          >
                            <GenerateId
                              prefix="pf-random-id-"
                            >
                              <div
                                className="pf-c-select pf-m-expanded"
                                data-ouia-component-id="OUIA-Generated-Select-checkbox-2"
                                data-ouia-component-type="PF4/Select"
                                data-ouia-safe={true}
                              >
                                <SelectToggle
                                  aria-label="Options menu"
                                  aria-labelledby=" pf-select-toggle-id-1"
                                  className=""
                                  handleTypeaheadKeys={[Function]}
                                  hasClearButton={false}
                                  hasFooter={false}
                                  hasPlaceholderStyle={false}
                                  id="pf-select-toggle-id-1"
                                  isActive={false}
                                  isDisabled={false}
                                  isOpen={true}
                                  isPlain={false}
                                  menuRef={
                                    Object {
                                      "current": <ul
                                        aria-label="Status"
                                        class="pf-c-select__menu"
                                        role="listbox"
                                      >
                                        <label
                                          class="pf-c-check pf-c-select__menu-item"
                                        >
                                          <input
                                            checked=""
                                            class="pf-c-check__input"
                                            id="pf-random-id-1-New"
                                            type="checkbox"
                                          />
                                          <span
                                            class="pf-c-check__label"
                                          >
                                            New
                                          </span>
                                        </label>
                                        <label
                                          class="pf-c-check pf-c-select__menu-item"
                                        >
                                          <input
                                            checked=""
                                            class="pf-c-check__input"
                                            id="pf-random-id-1-Pending"
                                            type="checkbox"
                                          />
                                          <span
                                            class="pf-c-check__label"
                                          >
                                            Pending
                                          </span>
                                        </label>
                                        <label
                                          class="pf-c-check pf-c-select__menu-item"
                                        >
                                          <input
                                            class="pf-c-check__input"
                                            id="pf-random-id-1-Running"
                                            type="checkbox"
                                          />
                                          <span
                                            class="pf-c-check__label"
                                          >
                                            Running
                                          </span>
                                        </label>
                                        <label
                                          class="pf-c-check pf-c-select__menu-item"
                                        >
                                          <input
                                            class="pf-c-check__input"
                                            id="pf-random-id-1-Cancelled"
                                            type="checkbox"
                                          />
                                          <span
                                            class="pf-c-check__label"
                                          >
                                            Cancelled
                                          </span>
                                        </label>
                                      </ul>,
                                    }
                                  }
                                  moveFocusToLastMenuItem={[Function]}
                                  onClickTypeaheadToggleButton={[Function]}
                                  onClose={[Function]}
                                  onEnter={[Function]}
                                  onToggle={[Function]}
                                  parentRef={
                                    Object {
                                      "current": <div
                                        class="pf-c-select pf-m-expanded"
                                        data-ouia-component-id="OUIA-Generated-Select-checkbox-2"
                                        data-ouia-component-type="PF4/Select"
                                        data-ouia-safe="true"
                                      >
                                        <button
                                          aria-expanded="true"
                                          aria-label="Options menu"
                                          aria-labelledby=" pf-select-toggle-id-1"
                                          class="pf-c-select__toggle"
                                          id="pf-select-toggle-id-1"
                                          type="button"
                                        >
                                          <div
                                            class="pf-c-select__toggle-wrapper"
                                          >
                                            <span
                                              class="pf-c-select__toggle-text"
                                            >
                                              Status
                                            </span>
                                            <div
                                              class="pf-c-select__toggle-badge"
                                            >
                                              <span
                                                class="pf-c-badge pf-m-read"
                                              >
                                                2
                                              </span>
                                            </div>
                                          </div>
                                          <span
                                            class="pf-c-select__toggle-arrow"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              fill="currentColor"
                                              height="1em"
                                              role="img"
                                              style="vertical-align: -0.125em;"
                                              viewBox="0 0 320 512"
                                              width="1em"
                                            >
                                              <path
                                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                              />
                                            </svg>
                                          </span>
                                        </button>
                                        <ul
                                          aria-label="Status"
                                          class="pf-c-select__menu"
                                          role="listbox"
                                        >
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              checked=""
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-New"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              New
                                            </span>
                                          </label>
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              checked=""
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-Pending"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              Pending
                                            </span>
                                          </label>
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-Running"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              Running
                                            </span>
                                          </label>
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-Cancelled"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              Cancelled
                                            </span>
                                          </label>
                                        </ul>
                                      </div>,
                                    }
                                  }
                                  type="button"
                                  variant="checkbox"
                                >
                                  <button
                                    aria-expanded={true}
                                    aria-haspopup={null}
                                    aria-label="Options menu"
                                    aria-labelledby=" pf-select-toggle-id-1"
                                    className="pf-c-select__toggle"
                                    disabled={false}
                                    id="pf-select-toggle-id-1"
                                    onClick={[Function]}
                                    onKeyDown={[Function]}
                                    type="button"
                                  >
                                    <div
                                      className="pf-c-select__toggle-wrapper"
                                    >
                                      <span
                                        className="pf-c-select__toggle-text"
                                      >
                                        Status
                                      </span>
                                      <div
                                        className="pf-c-select__toggle-badge"
                                      >
                                        <span
                                          className="pf-c-badge pf-m-read"
                                        >
                                          2
                                        </span>
                                      </div>
                                    </div>
                                    <span
                                      className="pf-c-select__toggle-arrow"
                                    >
                                      <CaretDownIcon
                                        color="currentColor"
                                        noVerticalAlign={false}
                                        size="sm"
                                      >
                                        <svg
                                          aria-hidden={true}
                                          aria-labelledby={null}
                                          fill="currentColor"
                                          height="1em"
                                          role="img"
                                          style={
                                            Object {
                                              "verticalAlign": "-0.125em",
                                            }
                                          }
                                          viewBox="0 0 320 512"
                                          width="1em"
                                        >
                                          <path
                                            d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                          />
                                        </svg>
                                      </CaretDownIcon>
                                    </span>
                                  </button>
                                </SelectToggle>
                                <ForwardRef
                                  aria-label="Status"
                                  aria-labelledby=""
                                  checked={
                                    Array [
                                      "New",
                                      "Pending",
                                    ]
                                  }
                                  footerRef={
                                    Object {
                                      "current": null,
                                    }
                                  }
                                  hasInlineFilter={false}
                                  isGrouped={false}
                                  isLastOptionBeforeFooter={[Function]}
                                  keyHandler={[Function]}
                                  openedOnEnter={false}
                                  position="left"
                                  selected={
                                    Array [
                                      "New",
                                      "Pending",
                                    ]
                                  }
                                  sendRef={[Function]}
                                >
                                  <SelectMenu
                                    aria-label="Status"
                                    aria-labelledby=""
                                    checked={
                                      Array [
                                        "New",
                                        "Pending",
                                      ]
                                    }
                                    className=""
                                    footerRef={
                                      Object {
                                        "current": null,
                                      }
                                    }
                                    hasInlineFilter={false}
                                    innerRef={
                                      Object {
                                        "current": <ul
                                          aria-label="Status"
                                          class="pf-c-select__menu"
                                          role="listbox"
                                        >
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              checked=""
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-New"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              New
                                            </span>
                                          </label>
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              checked=""
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-Pending"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              Pending
                                            </span>
                                          </label>
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-Running"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              Running
                                            </span>
                                          </label>
                                          <label
                                            class="pf-c-check pf-c-select__menu-item"
                                          >
                                            <input
                                              class="pf-c-check__input"
                                              id="pf-random-id-1-Cancelled"
                                              type="checkbox"
                                            />
                                            <span
                                              class="pf-c-check__label"
                                            >
                                              Cancelled
                                            </span>
                                          </label>
                                        </ul>,
                                      }
                                    }
                                    isCustomContent={false}
                                    isExpanded={false}
                                    isGrouped={false}
                                    isLastOptionBeforeFooter={[Function]}
                                    keyHandler={[Function]}
                                    maxHeight=""
                                    openedOnEnter={false}
                                    position="left"
                                    selected={
                                      Array [
                                        "New",
                                        "Pending",
                                      ]
                                    }
                                    sendRef={[Function]}
                                  >
                                    <ul
                                      aria-label="Status"
                                      aria-labelledby={null}
                                      className="pf-c-select__menu"
                                      role="listbox"
                                    >
                                      <SelectOption
                                        className=""
                                        component="button"
                                        index={0}
                                        inputId=""
                                        isChecked={true}
                                        isDisabled={false}
                                        isFavorite={null}
                                        isLastOptionBeforeFooter={[Function]}
                                        isLoad={false}
                                        isLoading={false}
                                        isNoResultsOption={false}
                                        isPlaceholder={false}
                                        isSelected={false}
                                        key=".$statusNew"
                                        keyHandler={[Function]}
                                        onClick={[Function]}
                                        sendRef={[Function]}
                                        setViewMoreNextIndex={[Function]}
                                        value="New"
                                      >
                                        <label
                                          className="pf-c-check pf-c-select__menu-item"
                                          onKeyDown={[Function]}
                                        >
                                          <input
                                            checked={true}
                                            className="pf-c-check__input"
                                            disabled={false}
                                            id="pf-random-id-1-New"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="pf-c-check__label"
                                          >
                                            New
                                          </span>
                                        </label>
                                      </SelectOption>
                                      <SelectOption
                                        className=""
                                        component="button"
                                        index={1}
                                        inputId=""
                                        isChecked={true}
                                        isDisabled={false}
                                        isFavorite={null}
                                        isLastOptionBeforeFooter={[Function]}
                                        isLoad={false}
                                        isLoading={false}
                                        isNoResultsOption={false}
                                        isPlaceholder={false}
                                        isSelected={false}
                                        key=".$statusPending"
                                        keyHandler={[Function]}
                                        onClick={[Function]}
                                        sendRef={[Function]}
                                        setViewMoreNextIndex={[Function]}
                                        value="Pending"
                                      >
                                        <label
                                          className="pf-c-check pf-c-select__menu-item"
                                          onKeyDown={[Function]}
                                        >
                                          <input
                                            checked={true}
                                            className="pf-c-check__input"
                                            disabled={false}
                                            id="pf-random-id-1-Pending"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="pf-c-check__label"
                                          >
                                            Pending
                                          </span>
                                        </label>
                                      </SelectOption>
                                      <SelectOption
                                        className=""
                                        component="button"
                                        index={2}
                                        inputId=""
                                        isChecked={false}
                                        isDisabled={false}
                                        isFavorite={null}
                                        isLastOptionBeforeFooter={[Function]}
                                        isLoad={false}
                                        isLoading={false}
                                        isNoResultsOption={false}
                                        isPlaceholder={false}
                                        isSelected={false}
                                        key=".$statusRunning"
                                        keyHandler={[Function]}
                                        onClick={[Function]}
                                        sendRef={[Function]}
                                        setViewMoreNextIndex={[Function]}
                                        value="Running"
                                      >
                                        <label
                                          className="pf-c-check pf-c-select__menu-item"
                                          onKeyDown={[Function]}
                                        >
                                          <input
                                            checked={false}
                                            className="pf-c-check__input"
                                            disabled={false}
                                            id="pf-random-id-1-Running"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="pf-c-check__label"
                                          >
                                            Running
                                          </span>
                                        </label>
                                      </SelectOption>
                                      <SelectOption
                                        className=""
                                        component="button"
                                        index={3}
                                        inputId=""
                                        isChecked={false}
                                        isDisabled={false}
                                        isFavorite={null}
                                        isLastOptionBeforeFooter={[Function]}
                                        isLoad={false}
                                        isLoading={false}
                                        isNoResultsOption={false}
                                        isPlaceholder={false}
                                        isSelected={false}
                                        key=".$statusCancelled"
                                        keyHandler={[Function]}
                                        onClick={[Function]}
                                        sendRef={[Function]}
                                        setViewMoreNextIndex={[Function]}
                                        value="Cancelled"
                                      >
                                        <label
                                          className="pf-c-check pf-c-select__menu-item"
                                          onKeyDown={[Function]}
                                        >
                                          <input
                                            checked={false}
                                            className="pf-c-check__input"
                                            disabled={false}
                                            id="pf-random-id-1-Cancelled"
                                            onChange={[Function]}
                                            type="checkbox"
                                          />
                                          <span
                                            className="pf-c-check__label"
                                          >
                                            Cancelled
                                          </span>
                                        </label>
                                      </SelectOption>
                                    </ul>
                                  </SelectMenu>
                                </ForwardRef>
                              </div>
                            </GenerateId>
                          </Select>
                        </div>
                      </ToolbarItem>
                      <Portal
                        containerInfo={
                          <div
                            aria-hidden="true"
                            class="pf-c-toolbar__group pf-m-hidden"
                            hidden=""
                          >
                            <div
                              class="pf-c-toolbar__item pf-m-chip-group"
                            >
                              <div
                                aria-labelledby="pf-random-id-2"
                                class="pf-c-chip-group pf-m-category"
                                data-ouia-component-type="PF4/ChipGroup"
                                data-ouia-safe="true"
                                role="group"
                              >
                                <div
                                  class="pf-c-chip-group__main"
                                >
                                  <span
                                    class="pf-c-chip-group__label"
                                    id="pf-random-id-2"
                                  >
                                    Status
                                  </span>
                                  <ul
                                    aria-labelledby="pf-random-id-2"
                                    class="pf-c-chip-group__list"
                                    role="list"
                                  >
                                    <li
                                      class="pf-c-chip-group__list-item"
                                    >
                                      <div
                                        class="pf-c-chip"
                                        data-ouia-component-id="OUIA-Generated-Chip-1"
                                        data-ouia-component-type="PF4/Chip"
                                        data-ouia-safe="true"
                                      >
                                        <span
                                          class="pf-c-chip__text"
                                          id="pf-random-id-3"
                                        >
                                          New
                                        </span>
                                        <button
                                          aria-disabled="false"
                                          aria-label="close"
                                          aria-labelledby="remove_pf-random-id-3 pf-random-id-3"
                                          class="pf-c-button pf-m-plain"
                                          data-ouia-component-id="close"
                                          data-ouia-component-type="PF4/Button"
                                          data-ouia-safe="true"
                                          id="remove_pf-random-id-3"
                                          type="button"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            fill="currentColor"
                                            height="1em"
                                            role="img"
                                            style="vertical-align: -0.125em;"
                                            viewBox="0 0 352 512"
                                            width="1em"
                                          >
                                            <path
                                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                            />
                                          </svg>
                                        </button>
                                      </div>
                                    </li>
                                    <li
                                      class="pf-c-chip-group__list-item"
                                    >
                                      <div
                                        class="pf-c-chip"
                                        data-ouia-component-id="OUIA-Generated-Chip-2"
                                        data-ouia-component-type="PF4/Chip"
                                        data-ouia-safe="true"
                                      >
                                        <span
                                          class="pf-c-chip__text"
                                          id="pf-random-id-4"
                                        >
                                          Pending
                                        </span>
                                        <button
                                          aria-disabled="false"
                                          aria-label="close"
                                          aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                                          class="pf-c-button pf-m-plain"
                                          data-ouia-component-id="close"
                                          data-ouia-component-type="PF4/Button"
                                          data-ouia-safe="true"
                                          id="remove_pf-random-id-4"
                                          type="button"
                                        >
                                          <svg
                                            aria-hidden="true"
                                            fill="currentColor"
                                            height="1em"
                                            role="img"
                                            style="vertical-align: -0.125em;"
                                            viewBox="0 0 352 512"
                                            width="1em"
                                          >
                                            <path
                                              d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                            />
                                          </svg>
                                        </button>
                                      </div>
                                    </li>
                                  </ul>
                                </div>
                                <div
                                  class="pf-c-chip-group__close"
                                >
                                  <button
                                    aria-disabled="false"
                                    aria-label="Close chip group"
                                    aria-labelledby="remove_group_pf-random-id-2 pf-random-id-2"
                                    class="pf-c-button pf-m-plain"
                                    data-ouia-component-id="Close chip group"
                                    data-ouia-component-type="PF4/Button"
                                    data-ouia-safe="true"
                                    id="remove_group_pf-random-id-2"
                                    type="button"
                                  >
                                    <svg
                                      aria-hidden="true"
                                      fill="currentColor"
                                      height="1em"
                                      role="img"
                                      style="vertical-align: -0.125em;"
                                      viewBox="0 0 512 512"
                                      width="1em"
                                    >
                                      <path
                                        d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                                      />
                                    </svg>
                                  </button>
                                </div>
                              </div>
                            </div>
                          </div>
                        }
                      >
                        <ToolbarItem
                          variant="chip-group"
                        >
                          <div
                            className="pf-c-toolbar__item pf-m-chip-group"
                          >
                            <ChipGroup
                              aria-label="Chip group category"
                              categoryName="Status"
                              closeBtnAriaLabel="Close chip group"
                              collapsedText="\${remaining} more"
                              defaultIsOpen={false}
                              expandedText="Show Less"
                              isClosable={true}
                              key="Status"
                              numChips={3}
                              onClick={[Function]}
                              onOverflowChipClick={[Function]}
                              tooltipPosition="top"
                            >
                              <GenerateId
                                prefix="pf-random-id-"
                              >
                                <div
                                  aria-labelledby="pf-random-id-2"
                                  className="pf-c-chip-group pf-m-category"
                                  data-ouia-component-type="PF4/ChipGroup"
                                  data-ouia-safe={true}
                                  role="group"
                                >
                                  <div
                                    className="pf-c-chip-group__main"
                                  >
                                    <span
                                      className="pf-c-chip-group__label"
                                      id="pf-random-id-2"
                                    >
                                      Status
                                    </span>
                                    <ul
                                      aria-labelledby="pf-random-id-2"
                                      className="pf-c-chip-group__list"
                                      role="list"
                                    >
                                      <li
                                        className="pf-c-chip-group__list-item"
                                        key="0"
                                      >
                                        <Chip
                                          className=""
                                          closeBtnAriaLabel="close"
                                          component="div"
                                          isOverflowChip={false}
                                          isReadOnly={false}
                                          key=".$New"
                                          onClick={[Function]}
                                          tooltipPosition="top"
                                        >
                                          <GenerateId
                                            prefix="pf-random-id-"
                                          >
                                            <div
                                              className="pf-c-chip"
                                              data-ouia-component-id="OUIA-Generated-Chip-1"
                                              data-ouia-component-type="PF4/Chip"
                                              data-ouia-safe={true}
                                            >
                                              <span
                                                className="pf-c-chip__text"
                                                id="pf-random-id-3"
                                              >
                                                New
                                              </span>
                                              <Button
                                                aria-label="close"
                                                aria-labelledby="remove_pf-random-id-3 pf-random-id-3"
                                                id="remove_pf-random-id-3"
                                                onClick={[Function]}
                                                ouiaId="close"
                                                variant="plain"
                                              >
                                                <ButtonBase
                                                  aria-label="close"
                                                  aria-labelledby="remove_pf-random-id-3 pf-random-id-3"
                                                  id="remove_pf-random-id-3"
                                                  innerRef={null}
                                                  onClick={[Function]}
                                                  ouiaId="close"
                                                  variant="plain"
                                                >
                                                  <button
                                                    aria-disabled={false}
                                                    aria-label="close"
                                                    aria-labelledby="remove_pf-random-id-3 pf-random-id-3"
                                                    className="pf-c-button pf-m-plain"
                                                    data-ouia-component-id="close"
                                                    data-ouia-component-type="PF4/Button"
                                                    data-ouia-safe={true}
                                                    disabled={false}
                                                    id="remove_pf-random-id-3"
                                                    onClick={[Function]}
                                                    role={null}
                                                    type="button"
                                                  >
                                                    <TimesIcon
                                                      aria-hidden="true"
                                                      color="currentColor"
                                                      noVerticalAlign={false}
                                                      size="sm"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        aria-labelledby={null}
                                                        fill="currentColor"
                                                        height="1em"
                                                        role="img"
                                                        style={
                                                          Object {
                                                            "verticalAlign": "-0.125em",
                                                          }
                                                        }
                                                        viewBox="0 0 352 512"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                                        />
                                                      </svg>
                                                    </TimesIcon>
                                                  </button>
                                                </ButtonBase>
                                              </Button>
                                            </div>
                                          </GenerateId>
                                        </Chip>
                                      </li>
                                      <li
                                        className="pf-c-chip-group__list-item"
                                        key="1"
                                      >
                                        <Chip
                                          className=""
                                          closeBtnAriaLabel="close"
                                          component="div"
                                          isOverflowChip={false}
                                          isReadOnly={false}
                                          key=".$Pending"
                                          onClick={[Function]}
                                          tooltipPosition="top"
                                        >
                                          <GenerateId
                                            prefix="pf-random-id-"
                                          >
                                            <div
                                              className="pf-c-chip"
                                              data-ouia-component-id="OUIA-Generated-Chip-2"
                                              data-ouia-component-type="PF4/Chip"
                                              data-ouia-safe={true}
                                            >
                                              <span
                                                className="pf-c-chip__text"
                                                id="pf-random-id-4"
                                              >
                                                Pending
                                              </span>
                                              <Button
                                                aria-label="close"
                                                aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                                                id="remove_pf-random-id-4"
                                                onClick={[Function]}
                                                ouiaId="close"
                                                variant="plain"
                                              >
                                                <ButtonBase
                                                  aria-label="close"
                                                  aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                                                  id="remove_pf-random-id-4"
                                                  innerRef={null}
                                                  onClick={[Function]}
                                                  ouiaId="close"
                                                  variant="plain"
                                                >
                                                  <button
                                                    aria-disabled={false}
                                                    aria-label="close"
                                                    aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                                                    className="pf-c-button pf-m-plain"
                                                    data-ouia-component-id="close"
                                                    data-ouia-component-type="PF4/Button"
                                                    data-ouia-safe={true}
                                                    disabled={false}
                                                    id="remove_pf-random-id-4"
                                                    onClick={[Function]}
                                                    role={null}
                                                    type="button"
                                                  >
                                                    <TimesIcon
                                                      aria-hidden="true"
                                                      color="currentColor"
                                                      noVerticalAlign={false}
                                                      size="sm"
                                                    >
                                                      <svg
                                                        aria-hidden="true"
                                                        aria-labelledby={null}
                                                        fill="currentColor"
                                                        height="1em"
                                                        role="img"
                                                        style={
                                                          Object {
                                                            "verticalAlign": "-0.125em",
                                                          }
                                                        }
                                                        viewBox="0 0 352 512"
                                                        width="1em"
                                                      >
                                                        <path
                                                          d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                                                        />
                                                      </svg>
                                                    </TimesIcon>
                                                  </button>
                                                </ButtonBase>
                                              </Button>
                                            </div>
                                          </GenerateId>
                                        </Chip>
                                      </li>
                                    </ul>
                                  </div>
                                  <div
                                    className="pf-c-chip-group__close"
                                  >
                                    <Button
                                      aria-label="Close chip group"
                                      aria-labelledby="remove_group_pf-random-id-2 pf-random-id-2"
                                      id="remove_group_pf-random-id-2"
                                      onClick={[Function]}
                                      ouiaId="Close chip group"
                                      variant="plain"
                                    >
                                      <ButtonBase
                                        aria-label="Close chip group"
                                        aria-labelledby="remove_group_pf-random-id-2 pf-random-id-2"
                                        id="remove_group_pf-random-id-2"
                                        innerRef={null}
                                        onClick={[Function]}
                                        ouiaId="Close chip group"
                                        variant="plain"
                                      >
                                        <button
                                          aria-disabled={false}
                                          aria-label="Close chip group"
                                          aria-labelledby="remove_group_pf-random-id-2 pf-random-id-2"
                                          className="pf-c-button pf-m-plain"
                                          data-ouia-component-id="Close chip group"
                                          data-ouia-component-type="PF4/Button"
                                          data-ouia-safe={true}
                                          disabled={false}
                                          id="remove_group_pf-random-id-2"
                                          onClick={[Function]}
                                          role={null}
                                          type="button"
                                        >
                                          <TimesCircleIcon
                                            aria-hidden="true"
                                            color="currentColor"
                                            noVerticalAlign={false}
                                            size="sm"
                                          >
                                            <svg
                                              aria-hidden="true"
                                              aria-labelledby={null}
                                              fill="currentColor"
                                              height="1em"
                                              role="img"
                                              style={
                                                Object {
                                                  "verticalAlign": "-0.125em",
                                                }
                                              }
                                              viewBox="0 0 512 512"
                                              width="1em"
                                            >
                                              <path
                                                d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                                              />
                                            </svg>
                                          </TimesCircleIcon>
                                        </button>
                                      </ButtonBase>
                                    </Button>
                                  </div>
                                </div>
                              </GenerateId>
                            </ChipGroup>
                          </div>
                        </ToolbarItem>
                      </Portal>
                    </ToolbarFilter>
                  </div>
                </ToolbarGroupWithRef>
              </ForwardRef>
            </div>
          </ToolbarToggleGroup>
        </div>
        <ToolbarExpandableContent
          chipContainerRef={
            Object {
              "current": <div
                class="pf-c-toolbar__group"
              />,
            }
          }
          clearFiltersButtonText="Clear all filters"
          expandableContentRef={
            Object {
              "current": <div
                class="pf-c-toolbar__expandable-content"
                id="toolbar-with-filter-expandable-content-3"
              >
                <div
                  class="pf-c-toolbar__group"
                />
                <div
                  class="pf-c-toolbar__group pf-m-chip-container"
                >
                  <div
                    class="pf-c-toolbar__group"
                  />
                  <div
                    class="pf-c-toolbar__item"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-link pf-m-inline"
                      data-ouia-component-id="OUIA-Generated-Button-link-3"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      id="save-button"
                      type="button"
                    >
                      Save filters
                    </button>
                  </div>
                  <div
                    class="pf-c-toolbar__item"
                  >
                    <button
                      aria-disabled="false"
                      class="pf-c-button pf-m-link pf-m-inline"
                      data-ouia-component-id="OUIA-Generated-Button-link-4"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      id="clear-button"
                      type="button"
                    >
                      Clear all filters
                    </button>
                  </div>
                </div>
              </div>,
            }
          }
          id="toolbar-with-filter-expandable-content-3"
          isExpanded={false}
          showClearFiltersButton={true}
        >
          <div
            className="pf-c-toolbar__expandable-content"
            id="toolbar-with-filter-expandable-content-3"
          >
            <ForwardRef>
              <ToolbarGroupWithRef
                innerRef={null}
              >
                <div
                  className="pf-c-toolbar__group"
                />
              </ToolbarGroupWithRef>
            </ForwardRef>
            <ForwardRef
              className="pf-m-chip-container"
            >
              <ToolbarGroupWithRef
                className="pf-m-chip-container"
                innerRef={null}
              >
                <div
                  className="pf-c-toolbar__group pf-m-chip-container"
                >
                  <ForwardRef>
                    <ToolbarGroupWithRef
                      innerRef={
                        Object {
                          "current": <div
                            class="pf-c-toolbar__group"
                          />,
                        }
                      }
                    >
                      <div
                        className="pf-c-toolbar__group"
                      />
                    </ToolbarGroupWithRef>
                  </ForwardRef>
                  <ToolbarItem>
                    <div
                      className="pf-c-toolbar__item"
                    >
                      <Button
                        id="save-button"
                        isInline={true}
                        onClick={[Function]}
                        variant="link"
                      >
                        <ButtonBase
                          id="save-button"
                          innerRef={null}
                          isInline={true}
                          onClick={[Function]}
                          variant="link"
                        >
                          <button
                            aria-disabled={false}
                            aria-label={null}
                            className="pf-c-button pf-m-link pf-m-inline"
                            data-ouia-component-id="OUIA-Generated-Button-link-3"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            id="save-button"
                            onClick={[Function]}
                            role={null}
                            type="button"
                          >
                            Save filters
                          </button>
                        </ButtonBase>
                      </Button>
                    </div>
                  </ToolbarItem>
                  <ToolbarItem>
                    <div
                      className="pf-c-toolbar__item"
                    >
                      <Button
                        id="clear-button"
                        isInline={true}
                        onClick={[Function]}
                        variant="link"
                      >
                        <ButtonBase
                          id="clear-button"
                          innerRef={null}
                          isInline={true}
                          onClick={[Function]}
                          variant="link"
                        >
                          <button
                            aria-disabled={false}
                            aria-label={null}
                            className="pf-c-button pf-m-link pf-m-inline"
                            data-ouia-component-id="OUIA-Generated-Button-link-4"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe={true}
                            disabled={false}
                            id="clear-button"
                            onClick={[Function]}
                            role={null}
                            type="button"
                          >
                            Clear all filters
                          </button>
                        </ButtonBase>
                      </Button>
                    </div>
                  </ToolbarItem>
                </div>
              </ToolbarGroupWithRef>
            </ForwardRef>
          </div>
        </ToolbarExpandableContent>
      </div>
    </ToolbarContent>
    <ToolbarChipGroupContent
      chipGroupContentRef={
        Object {
          "current": <div
            class="pf-c-toolbar__content"
          >
            <div
              aria-hidden="true"
              class="pf-c-toolbar__group pf-m-hidden"
              hidden=""
            >
              <div
                class="pf-c-toolbar__item pf-m-chip-group"
              >
                <div
                  aria-labelledby="pf-random-id-2"
                  class="pf-c-chip-group pf-m-category"
                  data-ouia-component-type="PF4/ChipGroup"
                  data-ouia-safe="true"
                  role="group"
                >
                  <div
                    class="pf-c-chip-group__main"
                  >
                    <span
                      class="pf-c-chip-group__label"
                      id="pf-random-id-2"
                    >
                      Status
                    </span>
                    <ul
                      aria-labelledby="pf-random-id-2"
                      class="pf-c-chip-group__list"
                      role="list"
                    >
                      <li
                        class="pf-c-chip-group__list-item"
                      >
                        <div
                          class="pf-c-chip"
                          data-ouia-component-id="OUIA-Generated-Chip-1"
                          data-ouia-component-type="PF4/Chip"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-c-chip__text"
                            id="pf-random-id-3"
                          >
                            New
                          </span>
                          <button
                            aria-disabled="false"
                            aria-label="close"
                            aria-labelledby="remove_pf-random-id-3 pf-random-id-3"
                            class="pf-c-button pf-m-plain"
                            data-ouia-component-id="close"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="remove_pf-random-id-3"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              />
                            </svg>
                          </button>
                        </div>
                      </li>
                      <li
                        class="pf-c-chip-group__list-item"
                      >
                        <div
                          class="pf-c-chip"
                          data-ouia-component-id="OUIA-Generated-Chip-2"
                          data-ouia-component-type="PF4/Chip"
                          data-ouia-safe="true"
                        >
                          <span
                            class="pf-c-chip__text"
                            id="pf-random-id-4"
                          >
                            Pending
                          </span>
                          <button
                            aria-disabled="false"
                            aria-label="close"
                            aria-labelledby="remove_pf-random-id-4 pf-random-id-4"
                            class="pf-c-button pf-m-plain"
                            data-ouia-component-id="close"
                            data-ouia-component-type="PF4/Button"
                            data-ouia-safe="true"
                            id="remove_pf-random-id-4"
                            type="button"
                          >
                            <svg
                              aria-hidden="true"
                              fill="currentColor"
                              height="1em"
                              role="img"
                              style="vertical-align: -0.125em;"
                              viewBox="0 0 352 512"
                              width="1em"
                            >
                              <path
                                d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
                              />
                            </svg>
                          </button>
                        </div>
                      </li>
                    </ul>
                  </div>
                  <div
                    class="pf-c-chip-group__close"
                  >
                    <button
                      aria-disabled="false"
                      aria-label="Close chip group"
                      aria-labelledby="remove_group_pf-random-id-2 pf-random-id-2"
                      class="pf-c-button pf-m-plain"
                      data-ouia-component-id="Close chip group"
                      data-ouia-component-type="PF4/Button"
                      data-ouia-safe="true"
                      id="remove_group_pf-random-id-2"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        fill="currentColor"
                        height="1em"
                        role="img"
                        style="vertical-align: -0.125em;"
                        viewBox="0 0 512 512"
                        width="1em"
                      >
                        <path
                          d="M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm121.6 313.1c4.7 4.7 4.7 12.3 0 17L338 377.6c-4.7 4.7-12.3 4.7-17 0L256 312l-65.1 65.6c-4.7 4.7-12.3 4.7-17 0L134.4 338c-4.7-4.7-4.7-12.3 0-17l65.6-65-65.6-65.1c-4.7-4.7-4.7-12.3 0-17l39.6-39.6c4.7-4.7 12.3-4.7 17 0l65 65.7 65.1-65.6c4.7-4.7 12.3-4.7 17 0l39.6 39.6c4.7 4.7 4.7 12.3 0 17L312 256l65.6 65.1z"
                        />
                      </svg>
                    </button>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="pf-c-toolbar__group"
            >
              <div
                class="pf-c-toolbar__item"
              >
                2 filters applied
              </div>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-1"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                id="save-button"
                type="button"
              >
                Save filters
              </button>
            </div>
            <div
              class="pf-c-toolbar__item"
            >
              <button
                aria-disabled="false"
                class="pf-c-button pf-m-link pf-m-inline"
                data-ouia-component-id="OUIA-Generated-Button-link-2"
                data-ouia-component-type="PF4/Button"
                data-ouia-safe="true"
                id="clear-button"
                type="button"
              >
                Clear all filters
              </button>
            </div>
          </div>,
        }
      }
      clearFiltersButtonText="Clear all filters"
      collapseListedFiltersBreakpoint="xl"
      customChipGroupContent={
        <React.Fragment>
          <ToolbarItem>
            <Button
              id="save-button"
              isInline={true}
              onClick={[Function]}
              variant="link"
            >
              Save filters
            </Button>
          </ToolbarItem>
          <ToolbarItem>
            <Button
              id="clear-button"
              isInline={true}
              onClick={[Function]}
              variant="link"
            >
              Clear all filters
            </Button>
          </ToolbarItem>
        </React.Fragment>
      }
      isExpanded={false}
      numberOfFilters={2}
      numberOfFiltersText={[Function]}
      showClearFiltersButton={true}
    >
      <div
        className="pf-c-toolbar__content"
      >
        <ForwardRef
          aria-hidden={true}
          className="pf-m-hidden"
          hidden={true}
        >
          <ToolbarGroupWithRef
            aria-hidden={true}
            className="pf-m-hidden"
            hidden={true}
            innerRef={null}
          >
            <div
              aria-hidden={true}
              className="pf-c-toolbar__group pf-m-hidden"
              hidden={true}
            />
          </ToolbarGroupWithRef>
        </ForwardRef>
        <ForwardRef>
          <ToolbarGroupWithRef
            innerRef={null}
          >
            <div
              className="pf-c-toolbar__group"
            >
              <ToolbarItem>
                <div
                  className="pf-c-toolbar__item"
                >
                  2 filters applied
                </div>
              </ToolbarItem>
            </div>
          </ToolbarGroupWithRef>
        </ForwardRef>
        <ToolbarItem>
          <div
            className="pf-c-toolbar__item"
          >
            <Button
              id="save-button"
              isInline={true}
              onClick={[Function]}
              variant="link"
            >
              <ButtonBase
                id="save-button"
                innerRef={null}
                isInline={true}
                onClick={[Function]}
                variant="link"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-1"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  id="save-button"
                  onClick={[Function]}
                  role={null}
                  type="button"
                >
                  Save filters
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ToolbarItem>
        <ToolbarItem>
          <div
            className="pf-c-toolbar__item"
          >
            <Button
              id="clear-button"
              isInline={true}
              onClick={[Function]}
              variant="link"
            >
              <ButtonBase
                id="clear-button"
                innerRef={null}
                isInline={true}
                onClick={[Function]}
                variant="link"
              >
                <button
                  aria-disabled={false}
                  aria-label={null}
                  className="pf-c-button pf-m-link pf-m-inline"
                  data-ouia-component-id="OUIA-Generated-Button-link-2"
                  data-ouia-component-type="PF4/Button"
                  data-ouia-safe={true}
                  disabled={false}
                  id="clear-button"
                  onClick={[Function]}
                  role={null}
                  type="button"
                >
                  Clear all filters
                </button>
              </ButtonBase>
            </Button>
          </div>
        </ToolbarItem>
      </div>
    </ToolbarChipGroupContent>
  </div>
</Toolbar>
`;

exports[`Toolbar should render with page inset flag 1`] = `
<div>
  <div
    class="pf-c-toolbar pf-m-page-insets"
    data-ouia-component-id="OUIA-Generated-Toolbar-2"
    data-ouia-component-type="PF4/Toolbar"
    data-ouia-safe="true"
    id="toolbar"
  >
    <div
      class="pf-c-toolbar__content"
    >
      <div
        class="pf-c-toolbar__content-section"
      >
        <div
          class="pf-c-toolbar__item"
        >
          Test
        </div>
        <div
          class="pf-c-toolbar__item"
        >
          Test 2
        </div>
        <hr
          class="pf-c-divider pf-m-vertical"
        />
        <div
          class="pf-c-toolbar__item"
        >
          Test 3 
        </div>
      </div>
      <div
        class="pf-c-toolbar__expandable-content"
        id="toolbar-expandable-content-1"
      >
        <div
          class="pf-c-toolbar__group"
        />
      </div>
    </div>
    <div
      class="pf-c-toolbar__content pf-m-hidden"
      hidden=""
    >
      <div
        class="pf-c-toolbar__group"
      />
    </div>
  </div>
</div>
`;

exports[`ToolbarItem should map width breakpoints 1`] = `
<div>
  <div
    class="pf-c-toolbar__item"
    style="--pf-c-toolbar__item--Width: 100px; --pf-c-toolbar__item--Width-on-sm: 80px; --pf-c-toolbar__item--Width-on-md: 150px; --pf-c-toolbar__item--Width-on-lg: 200px; --pf-c-toolbar__item--Width-on-xl: 250px; --pf-c-toolbar__item--Width-on-2xl: 300px;"
  >
    Test
  </div>
</div>
`;
